fix: adjust collapsed sidebar width from 72px to 56px for better UI consistency

--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -30,7 +30,7 @@
 	@include hide-scrollbar;
 
 	&.collapsed {
-		width: 72px;
+		width: 56px;
 
 		.divider {
 			margin: $spacing-sm 4px;
